fixed img size on mobile

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -52,7 +52,7 @@ section {
 p {
 	font-family: 'Poppins', sans-serif;
 	color: #767676;
-	font-size: calc(.8rem + .8vw);
+	font-size: calc(.6rem + .6vw);
 	line-height: calc(1.2rem + 1.2vw);
 	font-weight: 400;
 	margin: 0;
